# senior-os

./: .gitignore  README.md  config.json
.github/workflows/: main.yml
sconf/: README.md  SOS-GUI.md  SOS-conf.json  SOS-gui-style.md  config.json  pyproject.toml  requirements.txt  sconf.py  sconf_run.py
sconf/docs/: sconf_manual_en.md
sconf/images/: SWEB_IMAGE_CREDITS.txt
sconf/phish/: sweb_allowed_url.txt
sconf/src/: sconf.py
sconf/src/configuration/: ConfigurationDataProvider.py  ConfigurationDataWriter.py  configuration_provider.py  configuration_writer.py  setup.py
sconf/src/configuration/models/: SosConfiguration.py  SwebConfiguration.py  smail_configuration.py  sos_configuration.py  sweb_configuration.py
sconf/src/sconf/: TEST_FILE.txt  __main__.py
sconf/src/sconf/configuration/: configuration_provider.py  configuration_writer.py  default_configuration.py
sconf/src/sconf/configuration/models/: global_configuration.py  smail_configuration.py  sos_configuration.py  sweb_configuration.py
sconf/src/sconf/ui/components/: menu.py
sconf/src/sconf/ui/components/ui_transformation/: transformation.py
sconf/src/sconf/ui/convertors/: value_convertors.py
sconf/src/sconf/ui/styles/: global_style_sheets.py
sconf/src/sconf/ui/utilities/: scryptum.py
sconf/src/sconf/ui/view/: credits_view.py  global_settings_view.py  main_window_view.py  smail_settings_view.py  sweb_settings_view.py
sconf/src/sconf/ui/view/dialog/: table_input_dialog.py
sconf/src/sconf/ui/view_models/: global_settings_view_model.py  smail_settings_view_model.py  sweb_settings_view_model.py
sconf/src/ui/convertors/: value_convertors.py
sconf/src/ui/view/: global_settings_view.py  main_window_view.py  smail_settings_view.py  sweb_settings_view.py
sconf/src/ui/view_models/: global_settings_view_model.py  smail_settings_view_model.py  smail_settings_view_vodel.py  sweb_settings_view_model.py
sconf/style/: sos_gui_style.md
sgive/: .gitignore  README.md  __init__.py  pyproject.toml
sgive/graphical_interface/: .gitignore  App.py  __init__.py
sgive/graphical_interface/app_entry/: GUI1.py  __init__.py
sgive/guiRoot/: .gitignore  GUI1.py  backupCode  main.py
sgive/src/graphical_interface/: App.py
sgive/src/graphical_interface/ui_app/: GUI1.py
shelp/: README.md  requirements.txt
shelp/src/: main.py
shelp/src/configuration/: ConfigurationDataProvider.py  ConfigurationDataWriter.py
shelp/src/configuration/Models/: GlobalConfiguration.py  SwebConfiguration.py
shelp/src/configuration/models/: GlobalConfiguration.py  (+3 more)
shelp/src/decorators/: Decorators.py
shelp/src/ui/: MainWindow.py
siso/: 10_packages.sh  20_services.sh  Makefile  README.md
siso/scr/: 00_prepare.sh
siso/src/: 30_cleanup.sh  40_manifest.sh  50_grub_cfg.sh  grow.sh
siso/src/archlive/: packages.x86_64  pacman.conf
siso/src/scryptum/: pyproject.toml  scryptum.py
smail/: README.md  SMAIL.py  configuration.py  credits.txt  layout.py  pyproject.toml  requirements.txt  smail-app.py  smail.py  smail_run.py  smazat_po_predelani_SMAIL-image-credits.txt  style.py
smail/connection/: command_line_mail.py  mail_connection.py
smail/docs/: README_cz.md  smail_manual_cz.md  smail_manual_de.md  smail_manual_en.md
smail/src/: layout.py  style.py
smail/src/connection/: command_line_mail.py  mail_connection.py
smail/src/smail/: __main__.py  layout.py  security_settings_view.py  smail_confview.py  smail_settings_view.py  smailconf_main.py  style.py  visual_settings_view.py
smail/src/smail/connection/: command_line_mail.py  mail_connection.py
smail/template/: configActions.py  guiTemplate.py
srun/: README.md  config.json  pyproject.toml  srun_run.py
srun/docs/: srun-manual-en.md
srun/src/srun/: __main__.py
srun/src/srun/data/: executables.py
srun/src/srun/ui/dialog/: password_dialog.py
srun/src/srun/ui/helpers/: password_helper.py  scryptum.py
srun/src/srun/ui/styles/: srun_style_sheets.py
srun/src/srun/ui/view/: main_window_view.py
sweb/: README.cz.md  README.de.md  README.md  credits.txt  loadConfig.py  logPhishing.txt  poetry.lock.old  pyproject.toml  requirements.txt  smazat_po_predelani_credits.txt  sweb.py  sweb_run.py
sweb/antiPhishing/: URLBlocker.py
sweb/docs/: sweb_manual_cz.md  sweb_manual_de.md  sweb_manual_en.md
sweb/src/: je_potreba?_smazat_url_logger.py  language_translator.py  sweb.py  update_phishing_txt.py
sweb/src/browser/: browser_core.py
sweb/src/language/: language_translator.py
sweb/src/phish/: notification_email.py
sweb/src/sweb/: __main__.py
sweb/src/sweb/language/: language_translator.py
sweb/src/sweb/ml/: ml_check_url.py  phishing_detection_model.pkl  tfidf_vectorizer.pkl
sweb/src/sweb/phish/: notification_email.py  update_phishing.py
sweb/src/sweb/ui/: window.py
sweb/src/sweb/utils/: monitor_provider.py  url_blocker.py
sweb/src/ui/: window.py
sweb/src/utils/: url_blocker.py
theses/: README.md
(+35 files in other folders)
